Rename wizards files to forks files

--- a/forks.html
+++ b/forks.html
@@ -4,6 +4,6 @@
 <script src="rot.js"></script>
 </head>
 <body bgcolor>
-<script src="wizards.js"></script>
+<script src="forks.js"></script>
 </body>
 </html>
