--- a/forks.html
+++ b/forks.html
@@ -4,6 +4,7 @@
 <script src="rot.js"></script>
 </head>
 <body bgcolor>
+<script src="map.js"></script>
 <script src="forks.js"></script>
 </body>
 </html>
