Added bay class and implemented bay drawing.

--- a/forks.html
+++ b/forks.html
@@ -4,7 +4,9 @@
 <script src="rot.js"></script>
 </head>
 <body bgcolor>
-<script src="map.js"></script>
-<script src="forks.js"></script>
+  <script src="bay.js"></script>
+  <script src="entity.js"></script>
+  <script src="map.js"></script>
+  <script src="forks.js"></script>
 </body>
 </html>
