Added timing. Receiving fills periodically. Lose condition for filled bay.

--- a/forks.html
+++ b/forks.html
@@ -4,6 +4,7 @@
 <script src="rot.js"></script>
 </head>
 <body bgcolor>
+  <script src="clock.js"></script>
   <script src="bay.js"></script>
   <script src="entity.js"></script>
   <script src="map.js"></script>
