--- a/forks.html
+++ b/forks.html
@@ -8,6 +8,8 @@
   <script src="bay.js"></script>
   <script src="entity.js"></script>
   <script src="map.js"></script>
+  <script src="floor.js"></script>
+  <script src="map.json"></script>
   <script src="forks.js"></script>
 </body>
 </html>
